fixed the fucking flickering on css transitions on tablets

--- a/app/assets/stylesheets/Sitewide/preloader.css.scss
+++ b/app/assets/stylesheets/Sitewide/preloader.css.scss
@@ -7,7 +7,7 @@
   right:0;
   bottom:0;
   background-color:grey; /* change if the mask should have another color then white */
-  z-index:99; /* makes sure it stays on top */
+  z-index:2002; /* makes sure it stays on top */
 }
 
 #status {
@@ -16,7 +16,7 @@
   position:absolute;
   left:0%; /* centers the loading animation horizontally one the screen */
   top:0%; /* centers the loading animation vertically one the screen */
-  background-image:url(/assets/view_from_notre_dame_flickr_large.jpg); /* path to your loading animation */
+  background-image:url(/assets/spinner.gif); /* path to your loading animation */
   background-repeat:no-repeat;
   background-position:center;
   margin:-100px 0 0 -100px; /* is width and height divided by two */
