--- a/app/assets/stylesheets/trip_activities/carddeck.css.scss
+++ b/app/assets/stylesheets/trip_activities/carddeck.css.scss
@@ -47,12 +47,12 @@ div.morning_bg, div.afternoon_bg, div.evening_bg{
  position:fixed;
  z-index:-1;
  display:none;
- height: 100%;
+ height: 400px;
  background-repeat: no-repeat;
  background-attachment: fixed;
  width: 100%;
  top:-25px;
- background-position-y: -10px;
+ background-position-y: 0px;
 }
 
 body{
@@ -61,6 +61,9 @@ body{
   // background-repeat: no-repeat;
   // background-attachment: fixed;
   background-color: #DEEFFA;
+  // -webkit-backface-visibility: hidden;
+  // transform: translate3d(0,0,0);
+  // -webkit-transform: translate3d(0,0,0);
 }
 
 div.morning_bg{
@@ -77,17 +80,18 @@ div.evening_bg{
 
 body.morning_bg{
   background-color: #DEEFFA;//#F8FAFD;
-  @include single-transition(all, 3s, ease-in-out, 0.4s);
+  @include single-transition(background-color, 3s, ease-in-out, 0.4s);
+
 }
 
 body.afternoon_bg{
   background-color: #8dc0d9;//#D4EDED;
-  @include single-transition(all, 3s, ease-in-out, 0.4s);
+  @include single-transition(background-color, 3s, ease-in-out, 0.4s);
 }
 
 body.evening_bg{
   background-color: #365165;//#D3E5FC;
-  @include single-transition(all, 3s, ease-in-out, 0.4s);
+  @include single-transition(background-color, 3s, ease-in-out, 0.4s);
 }
 
 .navbar-fixed-top{
@@ -213,14 +217,20 @@ $lastrowheight: 10%;
 }
 
 .overview-button{
-  height: 60px;
-  width: 80%;
-  line-height: 60px;
-  font-size: 0.9em;
-  font-weight: 500;
-  padding: 4px 6px;
+  // height: 60px;
+  width: 75%;
+  text-align: center;
+  padding: 10px 5px;
   position: relative;
   @include border-radius($myDivBorderRadius);
+  .overview-button-text{
+    line-height: 1em;
+    font-size: 0.75em;
+    font-weight: 500;
+  }
+  .overview-icon{
+    font-size: 1.2em;
+  }
 }
 
 div.thumb-wrap{
@@ -685,9 +695,20 @@ div.rightcaption .ui-accordion-content {
 
 /* bottom rails things */ 
 .bottom-actionlinks{
-  float:left;
   @include col(12);
-  overflow: auto;
+  @include box-sizing(border-box);
+  padding: 1% 5%;
+  margin-top: 2%;
+  background-color: $myDivBg;
+  border-color: $borderGray;
+  border-width: $myDivBorderWidth;
+  border-style: solid;
+  @include border-radius($myDivBorderRadius);
+  @include box-shadow($myDivBoxShadow);
+  height: 301px;
+  overflow: hidden;
+  overflow-y: auto;
+  -webkit-overflow-scrolling: touch;
 }
 
 
